2009-04-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance variant pretty printing.
	* include/liboptimization/util.hxx: Handle variant
        on pointers.

2009-04-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Compute problem infinity.
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx: Implement infinity method.
	* src/cfsqp.cc: Use Problem::infinity method.

2009-04-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance pretty-printing.
	* include/liboptimization/util.hh,
	* include/liboptimization/util.hxx: Print
        vectors and pairs in a generic way.
	* src/derivable-function.cc,
	* src/function.cc,
	* src/linear-function.cc,
	* src/quadratic-function.cc,
	* src/twice-derivable-function.cc: Update print method.
	* tests/cfsqp.stdout,
	* tests/ipopt.stdout,
	* tests/simple-test.stdout: Update reference output.

2009-04-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Add addConstraint to Problem, enhance Problem pretty-printing.
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx: Add addConstraint and
        implement it. Enhance pretty printing (display starting point).
	* tests/cfsqp.cc,
	* tests/ipopt.cc: Use addConstraint
	* tests/simple-test.cc: Document.

2009-04-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement I/O for functions, problems and solvers.
	* include/liboptimization/cfsqp.hh,
	* include/liboptimization/derivable-function.hh,
	* include/liboptimization/function.hh,
	* include/liboptimization/generic-solver.hh,
	* include/liboptimization/linear-function.hh,
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx,
	* include/liboptimization/quadratic-function.hh,
	* include/liboptimization/solver.hh,
	* include/liboptimization/solver.hxx,
	* include/liboptimization/twice-derivable-function.hh,
	* include/liboptimization/util.hh,
	* include/liboptimization/util.hxx,
	* src/derivable-function.cc,
	* src/function.cc,
	* src/generic-solver.cc,